maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x+1,y,cpt)
                  ^